--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@jeremygendre/bpmn-engine",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "bpmn engine to parse .bpmn files",
-  "main": "dist/examples/index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "tsc && node dist/examples/index.js",
+    "start": "tsc && node dist/examples/example.js",
     "lint": "eslint . --ext .ts",
     "test": "exit 1"
   },
