--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
     "target": "es6",
     "moduleResolution": "node",
     "sourceMap": true,
+    "declaration": true,
     "outDir": "dist"
   },
+  "include": ["src/**/*"],
   "lib": ["es2015"]
 }
