--- a/package.json
+++ b/package.json
@@ -2,17 +2,16 @@
   "name": "@jeremygendre/bpmn-engine",
   "version": "1.1.2",
   "description": "bpmn engine to parse .bpmn files",
-  "main": "dist/lib/index.js",
-  "module": "dist/lib/index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "scripts": {
-    "build": "rm -rf dist/lib && tsc",
-    "start": "tsc && node dist/lib/examples/example.js",
+    "build": "rm -rf dist && tsc",
+    "start": "tsc && node dist/examples/example.js",
     "lint": "eslint . --ext .ts",
     "test": "exit 1"
   },
   "files": [
-    "dist/lib",
-    "dist/package.json"
+    "dist"
   ],
   "repository": {
     "type": "git",
