--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "rm -rf dist && tsc",
     "start": "npm run build && node dist/examples/example.js",
     "lint": "eslint . --ext .ts",
-    "test": "exit 1"
+    "test": "exit 1",
+    "prepare": "husky install"
   },
   "files": [
     "dist"
@@ -31,9 +32,16 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.56.0",
+    "husky": "^9.0.10",
+    "lint-staged": "^15.2.2",
+    "prettier": "3.2.5",
     "typescript": "^5.3.3"
   },
   "dependencies": {
     "fast-xml-parser": "^4.3.4"
+  },
+  "lint-staged": {
+    "*.ts": "eslint --cache --fix",
+    "*.{ts,json,md}": "prettier --write"
   }
 }
