--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "rm -rf dist && tsc",
     "start": "npm run build && node dist/examples/example.js",
     "lint": "eslint . --ext .ts",
-    "test": "exit 1"
+    "test": "npm run build && jest"
   },
   "files": [
     "dist"
@@ -27,10 +27,13 @@
   },
   "homepage": "https://github.com/JeremyGendre/bpmn-engine#readme",
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.16",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.56.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
